k8s/client-interface-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-interface
  labels: 
    app: dev
spec:
  selector:
    matchLabels:
      app: client-interface
  template:
    metadata:
      labels:
        app: client-interface
    spec:
      containers:
      - name: client-interface
        image: docker.io/ocfcloud/client-interface:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "1Gi"
            cpu: 200m
