k8s/coap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coap-app
  labels: 
    app: dev
spec:
  selector:
    matchLabels:
      app: coap-interface
  template:
    metadata:
      labels:
        app: coap-interface
    spec:
      containers:
      - name: coap-interface
        image: docker.io/ocfcloud/coap-interface:latest
        ports:
        - containerPort: 8080
        - containerPort: 5684
        resources:
          limits:
            memory: "1Gi"
            cpu: 200m
