k8s/coap-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: coap-service
  labels:
    app: dev
spec:
  selector:
    app: coap-interface
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  - name: coaps
    port: 5684
    targetPort: 5684
    protocol: TCP
  type: LoadBalancer
  #docs say that GCE LB requires NodePort instead of LoadBalancer but I may have misintpretted it
