k8s/client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: client-interface 
              servicePort: 8080
